--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,8 @@ header {
     transform: translatey(10px);
 }
 
-h2 {
-    margin: 0px;
+.services h2 {
+    margin: 0px 0px 64px 0px;
 }
 
 .h2-top {
@@ -95,7 +95,7 @@ h2 {
     display: block;
     text-align: center;
     text-transform: uppercase;
-    font-weight: 900;
+    font-weight: 700;
     font-size: 30px;
     line-height: 36px;
     color: #333333;
@@ -115,12 +115,18 @@ h2 {
     margin: 0px;
     padding: 0px;
     list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .list-items {
     display: flex;
-    /* flex-wrap: wrap; */
-    width: 450px;
+    width: 350px;
+}
+
+.list-items:not(:nth-last-child(-n+3)) {
+    margin-bottom: 95px;
 }
 
 .img {
@@ -135,7 +141,6 @@ h3 {
     line-height: 17px;
     color: #333333;
     margin: 0px 0px 20px 0px;
-    /* width: max-content; */
 }
 
 .list-text {
@@ -144,4 +149,128 @@ h3 {
     line-height: 24px;
     color: #999999;
     margin: 0px;
+}
+
+.services {
+    margin-bottom: 95px;
+}
+
+.team h2 {
+    margin: 0px 0px 45px 0px;
+}
+
+.team-text {
+    text-align: center;
+    padding: 0px 150px;
+    margin-bottom: 90px;
+}
+
+.team-list {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.team-items {
+    /* width: 380px;
+    height: 470px; */
+    background-color: #95e1d3;
+    display: flex;
+    flex-direction: column;
+}
+
+.img-team {
+    transition-property: transform;
+    transition-duration: 200ms;
+    transition-timing-function: linear;
+    /* margin-bottom: 27px; */
+}
+
+.team-items:hover .img-team {
+    transform: translate(-10px, -10px);
+}
+
+.gradient {
+    opacity: 0;
+    width: 380px;
+    height: 470px;
+    position: absolute;
+    transition-property: transform, opacity;
+    transition-duration: 200ms;
+    transition-timing-function: linear;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.team-items:hover .gradient {
+    opacity: 1;
+    transform: translate(-10px, -10px);
+    background: linear-gradient(0deg, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%);
+}
+
+.button {
+    width: 55px;
+    height: 56px;
+    border: none;
+    padding: 0px;
+    margin: 0px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #fce38a;
+    transition-property: background-color;
+    transition-duration: 200ms;
+    transition-timing-function: linear;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: #95e1d3;
+}
+
+.button:not(:nth-last-of-type(1)) {
+    margin-right: 1px;
+}
+
+.facebook {
+    background-image: url(../img/facebook.png);
+}
+
+.twitter {
+    background-image: url(../img/twitter.png);
+}
+
+.pinterest {
+    background-image: url(../img/pinterest.png);
+}
+
+.insta {
+    background-image: url(../img/instagram.png);
+}
+
+h4 {
+    text-align: center;
+    margin: 0px;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 17px;
+    color: #333333;
+    font-weight: 400;
+    background-color: rgba(255, 255, 255, 1);
+    padding-top: 27px;
+}
+
+.position {
+    font-family: 'Roboto', sans-serif;
+    font-style: italic;
+    font-size: 15px;
+    line-height: 24px;
+    color: #999999;
+    text-align: center;
+    font-weight: 300;
+    background-color: rgba(255, 255, 255, 1);
+    padding-top: 14px;
+    margin-bottom: 80px;
 }
