--- a/css/style.css
+++ b/css/style.css
@@ -176,9 +176,14 @@ h3 {
 .team-items {
     /* width: 380px;
     height: 470px; */
-    background-color: #95e1d3;
+    /* background-color: #95e1d3; */
     display: flex;
     flex-direction: column;
+}
+
+.wrap-img {
+    background-color: #95e1d3;
+    display: flex;
 }
 
 .img-team {
@@ -259,6 +264,7 @@ h4 {
     color: #333333;
     font-weight: 400;
     background-color: rgba(255, 255, 255, 1);
+    margin-bottom: 14px;
     padding-top: 27px;
 }
 
@@ -271,6 +277,63 @@ h4 {
     text-align: center;
     font-weight: 300;
     background-color: rgba(255, 255, 255, 1);
-    padding-top: 14px;
-    margin-bottom: 80px;
+}
+
+main::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #e5e5e5;
+    margin-top: 80px;
+}
+
+text-footer:last-child {
+    color: #f38181;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0px;
+}
+
+.text-footer {
+    font-size: 14px;
+    line-height: 17px;
+    color: #333333;
+}
+
+.text-footer span {
+    color: #f38181;
+}
+
+form {
+    display: flex;
+    border: 1px solid #e5e5e5;
+    ;
+}
+
+.email-bitton {
+    padding: 0px;
+    border: none;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    background-color: #95e1d3;
+    width: 151px;
+    height: 40px;
+    text-transform: uppercase;
+}
+
+.email {
+    border: none;
+    width: 228px;
+    text-transform: capitalize;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
+    font-weight: lighter;
+    color: #cccccc;
+    font-style: italic;
 }
